Transform blog into Nandini Pahuja's portfolio with Van Gogh theme, animations, and About page

--- a/content/ai-agents/index.mdx
+++ b/content/ai-agents/index.mdx
@@ -4,14 +4,13 @@ description: "This blog talks about popular open-source AI agents, their practic
 image: "../../public/blogs/art-banner.jpg"
 publishedAt: "2025-01-13"
 updatedAt: "2025-01-13"
-author: "amaanbhati"
+author: "Nandini Pahuja"
 isPublished: true
 tags:
 - ai
 - tools
 - open-source
 - development-tools
-- productivity
 ---
 
 
