Add Tech page with CCD conference experiences and make tech container clickable

--- a/content/web-app-deployment/index.mdx
+++ b/content/web-app-deployment/index.mdx
@@ -4,7 +4,7 @@ description: "Different ways to deploy and host your web applications to the int
 image: "../../public/blogs/art-2.jpeg"
 publishedAt: "2024-06-24"
 updatedAt: "2024-06-24"
-author: "amaanbhati"
+author: "Nandini Pahuja"
 isPublished: true
 tags: 
 - tools
