--- a/content/web-development-tools-productivity/index.mdx
+++ b/content/web-development-tools-productivity/index.mdx
@@ -4,7 +4,7 @@ description: "Discover 10 must-have web development tools that can significantly
 image: "../../public/blogs/art-11.png"
 publishedAt: "2024-06-23"
 updatedAt: "2022-06-23"
-author: "amaanbhati"
+author: "Nandini Pahuja"
 isPublished: true
 tags:
 - productivity
