--- a/content/web-security-ssl-certificates/index.mdx
+++ b/content/web-security-ssl-certificates/index.mdx
@@ -4,7 +4,7 @@ description: "The intricacies of SSL/TLS certificates, from encryption methods t
 image: "../../public/blogs/art-27.jpg"
 publishedAt: "2024-08-21"
 updatedAt: "2024-08-21"
-author: "amaanbhati"
+author: "Nandini Pahuja"
 isPublished: true
 tags: 
 - security
