Complete portfolio transformation: Nandini Pahuja's creative tech journey with Van Gogh aesthetics

--- a/content/ai-powered-code-editors/index.mdx
+++ b/content/ai-powered-code-editors/index.mdx
@@ -4,7 +4,7 @@ description: "Discover how AI-powered code editors like Cursor AI & GitHub Copil
 image: "../../public/blogs/ai-powered-code-editors-banner.png"
 publishedAt: "2025-01-16"
 updatedAt: "2025-01-16"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: false
 tags:
 - ai
