--- a/content/mapbox-ai-navigation/index.mdx
+++ b/content/mapbox-ai-navigation/index.mdx
@@ -4,7 +4,7 @@ description: "An in-depth exploration of Mapbox AI Navigation SDK's advanced fea
 image: "../../public/blogs/art-32.png"
 publishedAt: "2024-10-12"
 updatedAt: "2024-10-13"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - Web-3
@@ -18,9 +18,9 @@ tags:
 In the modern dev world! Where every other day, someone's slapping an "AI-powered" label on their coffee maker. It's like we're all competing in the "Who Can Shove AI Into the Most Unnecessary Places" Olympics. But hold onto your neural networks, folks, because Mapbox has actually done something that makes us sit up and say, "Hey, that AI thing? It actually makes sense here!".
 Today, we're taking a deep dive into one of their most groundbreaking offerings: the Mapbox AI Navigation SDK. This powerful tool is not just improving navigation; it's completely transforming how developers approach routing and user experience in their applications.
 
-> Before we delve into the AI Navigation SDK, if you're new to Mapbox or want a refresher on its core features, check out my previous blog post on [Mapbox Fundamentals](https://blog.amaanbhati.tech/blogs/mapbox-doing-wonders) or [visit the official Mapbox website](https://www.mapbox.com/). It provides a solid foundation for understanding Mapbox's capabilities. 
+> Before we delve into the AI Navigation SDK, if you're new to Mapbox or want a refresher on its core features, check out my previous blog post on [Mapbox Fundamentals](https://blog.nandini-pahuja.tech/blogs/mapbox-doing-wonders) or [visit the official Mapbox website](https://www.mapbox.com/). It provides a solid foundation for understanding Mapbox's capabilities. 
 
->In this article, we'll also explore how to integrate Mapbox into your project and take a look at a practical example. I've also built a Mapbox directions app using Next.js, which you can find on GitHub: [Mapbox Directions App](https://github.com/amaan-bhati/mapbox-directions-app). This will give you a hands-on perspective of working with Mapbox in a real-world scenario.
+>In this article, we'll also explore how to integrate Mapbox into your project and take a look at a practical example. I've also built a Mapbox directions app using Next.js, which you can find on GitHub: [Mapbox Directions App](https://github.com/NandiniPahuja/mapbox-directions-app). This will give you a hands-on perspective of working with Mapbox in a real-world scenario.
 
 ## What is Mapbox AI Navigation SDK?
 
