--- a/content/mapbox-doing-wonders/index.mdx
+++ b/content/mapbox-doing-wonders/index.mdx
@@ -4,7 +4,7 @@ description: "Explore the power of Mapbox for creating interactive and customiza
 image: "../../public/blogs/art-30.jpg"
 publishedAt: "2024-10-11"
 updatedAt: "2023-10-11"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - web-3
