--- a/content/mastering-css-grid-layout/index.mdx
+++ b/content/mastering-css-grid-layout/index.mdx
@@ -4,7 +4,7 @@ description: "Dive into the world of CSS Grid Layout with this comprehensive gui
 image: "../../public/blogs/art-25.png"
 publishedAt: "2024-04-21"
 updatedAt: "2024-04-21"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - css
