--- a/content/no-code-api-testing/index.mdx
+++ b/content/no-code-api-testing/index.mdx
@@ -4,7 +4,7 @@ description: " Automate unit test generation with Keploy's UTG, leveraging Meta 
 image: "../../public/blogs/art-banner.jpg"
 publishedAt: "2025-01-13"
 updatedAt: "2025-01-13"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - api
