--- a/content/progressive-web-apps-pwa/index.mdx
+++ b/content/progressive-web-apps-pwa/index.mdx
@@ -4,7 +4,7 @@ description: "Progressive Web Apps (PWAs) have transformed how users interact wi
 image: "../../public/blogs/art-24.jpg"
 publishedAt: "2024-05-19"
 updatedAt: "2024-05-19"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - PWA
