--- a/content/quantum-brainrot/index.mdx
+++ b/content/quantum-brainrot/index.mdx
@@ -4,7 +4,7 @@ description: "Quantum computing blog inspired by google's willow."
 image: "../../public/blogs/art-21.jpg"
 publishedAt: "2024-06-16"
 updatedAt: "2024-06-16"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: false
 tags: 
 - tech
