--- a/content/react-test/index.mdx
+++ b/content/react-test/index.mdx
@@ -4,7 +4,7 @@ description: "Learn best practices for testing React applications in Visual Stud
 image: "../../public/blogs/art-18.png"
 publishedAt: "2024-03-31"
 updatedAt: "2024-03-31"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: false
 tags:
 - Testing
