--- a/content/web-accessibility-inclusive-design/index.mdx
+++ b/content/web-accessibility-inclusive-design/index.mdx
@@ -4,7 +4,7 @@ description: "Embrace the principles of web accessibility and ensure that your w
 image: "../../public/blogs/art-21.jpg"
 publishedAt: "2024-06-16"
 updatedAt: "2024-06-16"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags: 
 - code quality
