--- a/content/best-practices-for-writing-clean-and-maintainable-code/index.mdx
+++ b/content/best-practices-for-writing-clean-and-maintainable-code/index.mdx
@@ -4,7 +4,7 @@ description: How to deploy your Next.js apps on Vercel.
 image: "../../public/blogs/art-17.png"
 publishedAt: "2024-03-17"
 updatedAt: "2024-03-17"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags: 
 - code quality
