--- a/content/building-progressive-web-apps-bridging-the-gap-between-web-and-mobile/index.mdx
+++ b/content/building-progressive-web-apps-bridging-the-gap-between-web-and-mobile/index.mdx
@@ -4,7 +4,7 @@ description: "Integrating mindfulness practices helps developers cultivate prese
 image: "../../public/blogs/art-18.png"
 publishedAt: "2024-03-31"
 updatedAt: "2024-03-31"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: false
 tags:
 - PWA
