--- a/content/getting-started-with-nextjs/index.mdx
+++ b/content/getting-started-with-nextjs/index.mdx
@@ -4,7 +4,7 @@ description: "Getting started with nextjs, this blog explores the best practices
 image: "../../public/blogs/art-15.png"
 publishedAt: "2024-06-23"
 updatedAt: "2024-06-23"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - web-development
