--- a/content/hld-and-lld/index.mdx
+++ b/content/hld-and-lld/index.mdx
@@ -4,7 +4,7 @@ description: "High level designs V/S Low level designs in system designs. This b
 image: "../../public/blogs/art-28.webp"
 publishedAt: "2024-09-28"
 updatedAt: "2024-09-28"
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - system-design
