--- a/content/restful-apis-building-blocks/index.mdx
+++ b/content/restful-apis-building-blocks/index.mdx
@@ -6,7 +6,7 @@ image: "../../public/blogs/art-26.png"
 publishedAt: "2024-07-15"
 updatedAt: "2024-07-15"
 
-author: "amaanbhati"
+author: "nandini-pahuja"
 isPublished: true
 tags:
 - tools
